# ani-cli-api

./: .gitignore  Cargo.toml  README.md
src/: main.rs  routes.rs  scraping.rs  structs.rs
