[package]
name = "ani-cli-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
trust-dns-resolver = "0.22"
tokio = { version = "1.0", features = ["full"] }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
headless_chrome = "1.0.17"
anyhow = "1.0.99"
once_cell = "1.21.3"
regex = "1.11.1"
url = "2.5.4"
